sep-bundle/platform/emf-semantic/emf-semantic-impl/src/main/java/com/sirma/itt/emf/semantic/query/grammar/SirmaParser.java
// Generated from
// A:/Development/Workspaces/IDoc/sep-bundle/platform/emf-semantic/emf-semantic-impl/src/main/resources/com/sirma/itt/emf/semantic/query/grammar/Sirma.g4
// by ANTLR 4.1

package com.sirma.itt.emf.semantic.query.grammar;

import java.io.Serializable;
import java.text.ParseException;
import java.text.SimpleDateFormat;
import java.util.Date;
import java.util.List;

import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNSimulator;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import com.sirma.itt.emf.semantic.query.Operator;
import com.sirma.itt.emf.semantic.query.PredicateValidator;

// TODO: Auto-generated Javadoc
/**
 * The Class SirmaParser.
 */
@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class SirmaParser extends Parser {

	/** The Constant _decisionToDFA. */
	protected static final DFA[] _decisionToDFA;

	/** The Constant _sharedContextCache. */
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();

	/** The Constant WS. */
	public static final int T__1 = 1, T__0 = 2, LPAREN = 3, RPAREN = 4, COMMA = 5, LBRACKET = 6,
			RBRACKET = 7, FIND = 8, WHERE = 9, BANG = 10, LT = 11, GT = 12, GTEQ = 13, LTEQ = 14,
			EQUALS = 15, NOT_EQUALS = 16, LIKE = 17, NOT_LIKE = 18, IN = 19, IS = 20, AND = 21,
			OR = 22, NOT = 23, EMPTY = 24, WORD = 25, INTEGER = 26, DATEFULL = 27, DATE = 28,
			TIME = 29, ALL = 30, HAS = 31, WS = 32;

	/** The Constant tokenNames. */
	public static final String[] tokenNames = { "<INVALID>", "'has Relation'", "'has Design'",
			"LPAREN", "')'", "','", "'['", "']'", "FIND", "WHERE", "'!'", "'<'", "'>'", "'>='",
			"'<='", "'='", "'!='", "LIKE", "'!~'", "IN", "IS", "AND", "OR", "NOT", "EMPTY", "WORD",
			"INTEGER", "DATEFULL", "DATE", "TIME", "ALL", "HAS", "WS" };

	/** The Constant RULE_date. */
	public static final int RULE_query = 0, RULE_subStatement = 1, RULE_clause = 2,
			RULE_orClause = 3, RULE_booleanClause = 4, RULE_listOfValues = 5, RULE_object = 6,
			RULE_subject = 7, RULE_value = 8, RULE_operator = 9, RULE_relation = 10,
			RULE_date = 11;

	/** The Constant ruleNames. */
	public static final String[] ruleNames = { "query", "subStatement", "clause", "orClause",
			"booleanClause", "listOfValues", "object", "subject", "value", "operator", "relation",
			"date" };

	/**
	 * {@inheritDoc}
	 */
	@Override
	public String getGrammarFileName() {
		return "Sirma.g4";
	}

	/**
	 * {@inheritDoc}
	 */
	@Override
	public String[] getTokenNames() {
		return tokenNames;
	}

	/**
	 * {@inheritDoc}
	 */
	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	/**
	 * {@inheritDoc}
	 */
	@Override
	public ATN getATN() {
		return _ATN;
	}

	/** The predicate validator. */
	private PredicateValidator predicateValidator;

	/**
	 * Sets the predicate validator.
	 * 
	 * @param validator
	 *            the new predicate validator
	 */
	public void setPredicateValidator(PredicateValidator validator) {
		this.predicateValidator = validator;
	}

	/**
	 * Instantiates a new sirma parser.
	 * 
	 * @param input
	 *            the input
	 */
	public SirmaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	/**
	 * The Class QueryContext.
	 */
	public static class QueryContext extends ParserRuleContext {

		/**
		 * Where.
		 * 
		 * @return the terminal node
		 */
		public TerminalNode WHERE() {
			return getToken(SirmaParser.WHERE, 0);
		}

		/**
		 * Object.
		 * 
		 * @return the object context
		 */
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class, 0);
		}

		/**
		 * Or clause.
		 * 
		 * @return the list
		 */
		public List<OrClauseContext> orClause() {
			return getRuleContexts(OrClauseContext.class);
		}

		/**
		 * Find.
		 * 
		 * @return the terminal node
		 */
		public TerminalNode FIND() {
			return getToken(SirmaParser.FIND, 0);
		}

		/**
		 * Or clause.
		 * 
		 * @param i
		 *            the i
		 * @return the or clause context
		 */
		public OrClauseContext orClause(int i) {
			return getRuleContext(OrClauseContext.class, i);
		}

		/**
		 * Instantiates a new query context.
		 * 
		 * @param parent
		 *            the parent
		 * @param invokingState
		 *            the invoking state
		 */
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public int getRuleIndex() {
			return RULE_query;
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SirmaListener)
				((SirmaListener) listener).enterQuery(this);
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof SirmaListener)
				((SirmaListener) listener).exitQuery(this);
		}
	}

	/**
	 * Query.
	 * 
	 * @return the query context
	 * @throws RecognitionException
	 *             the recognition exception
	 */
	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		int _la;
		try {
			setState(37);
			switch (_input.LA(1)) {
				case FIND:
					enterOuterAlt(_localctx, 1);
					{
						setState(24);
						match(FIND);
						setState(25);
						object();
						setState(26);
						match(WHERE);
						setState(28);
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
								{
									setState(27);
									orClause();
								}
							}
							setState(30);
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << 2) | (1L << WORD))) != 0));
					}
					break;
				case 1:
				case 2:
				case WORD:
					enterOuterAlt(_localctx, 2);
					{
						setState(33);
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
								{
									setState(32);
									orClause();
								}
							}
							setState(35);
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << 2) | (1L << WORD))) != 0));
					}
					break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	/**
	 * The Class SubStatementContext.
	 */
	public static class SubStatementContext extends ParserRuleContext {

		/**
		 * Or clause.
		 * 
		 * @return the list
		 */
		public List<OrClauseContext> orClause() {
			return getRuleContexts(OrClauseContext.class);
		}

		/**
		 * Rparen.
		 * 
		 * @return the terminal node
		 */
		public TerminalNode RPAREN() {
			return getToken(SirmaParser.RPAREN, 0);
		}

		/**
		 * Or clause.
		 * 
		 * @param i
		 *            the i
		 * @return the or clause context
		 */
		public OrClauseContext orClause(int i) {
			return getRuleContext(OrClauseContext.class, i);
		}

		/**
		 * Lparen.
		 * 
		 * @return the terminal node
		 */
		public TerminalNode LPAREN() {
			return getToken(SirmaParser.LPAREN, 0);
		}

		/**
		 * Instantiates a new sub statement context.
		 * 
		 * @param parent
		 *            the parent
		 * @param invokingState
		 *            the invoking state
		 */
		public SubStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public int getRuleIndex() {
			return RULE_subStatement;
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SirmaListener)
				((SirmaListener) listener).enterSubStatement(this);
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof SirmaListener)
				((SirmaListener) listener).exitSubStatement(this);
		}
	}

	/**
	 * Sub statement.
	 * 
	 * @return the sub statement context
	 * @throws RecognitionException
	 *             the recognition exception
	 */
	public final SubStatementContext subStatement() throws RecognitionException {
		SubStatementContext _localctx = new SubStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_subStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(39);
				match(LPAREN);
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
						{
							setState(40);
							orClause();
						}
					}
					setState(43);
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << 2) | (1L << WORD))) != 0));
				setState(45);
				match(RPAREN);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	/**
	 * The Class ClauseContext.
	 */
	public static class ClauseContext extends ParserRuleContext {

		/**
		 * Boolean clause.
		 * 
		 * @param i
		 *            the i
		 * @return the boolean clause context
		 */
		public BooleanClauseContext booleanClause(int i) {
			return getRuleContext(BooleanClauseContext.class, i);
		}

		/**
		 * And.
		 * 
		 * @return the list
		 */
		public List<TerminalNode> AND() {
			return getTokens(SirmaParser.AND);
		}

		/**
		 * Boolean clause.
		 * 
		 * @return the list
		 */
		public List<BooleanClauseContext> booleanClause() {
			return getRuleContexts(BooleanClauseContext.class);
		}

		/**
		 * And.
		 * 
		 * @param i
		 *            the i
		 * @return the terminal node
		 */
		public TerminalNode AND(int i) {
			return getToken(SirmaParser.AND, i);
		}

		/**
		 * Instantiates a new clause context.
		 * 
		 * @param parent
		 *            the parent
		 * @param invokingState
		 *            the invoking state
		 */
		public ClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public int getRuleIndex() {
			return RULE_clause;
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SirmaListener)
				((SirmaListener) listener).enterClause(this);
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof SirmaListener)
				((SirmaListener) listener).exitClause(this);
		}
	}

	/**
	 * Clause.
	 * 
	 * @return the clause context
	 * @throws RecognitionException
	 *             the recognition exception
	 */
	public final ClauseContext clause() throws RecognitionException {
		ClauseContext _localctx = new ClauseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_clause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(47);
				booleanClause();
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == AND) {
					{
						{
							setState(48);
							match(AND);
							setState(49);
							booleanClause();
						}
					}
					setState(54);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	/**
	 * The Class OrClauseContext.
	 */
	public static class OrClauseContext extends ParserRuleContext {

		/**
		 * Clause.
		 * 
		 * @param i
		 *            the i
		 * @return the clause context
		 */
		public ClauseContext clause(int i) {
			return getRuleContext(ClauseContext.class, i);
		}

		/**
		 * Or.
		 * 
		 * @return the list
		 */
		public List<TerminalNode> OR() {
			return getTokens(SirmaParser.OR);
		}

		/**
		 * Or.
		 * 
		 * @param i
		 *            the i
		 * @return the terminal node
		 */
		public TerminalNode OR(int i) {
			return getToken(SirmaParser.OR, i);
		}

		/**
		 * Clause.
		 * 
		 * @return the list
		 */
		public List<ClauseContext> clause() {
			return getRuleContexts(ClauseContext.class);
		}

		/**
		 * Instantiates a new or clause context.
		 * 
		 * @param parent
		 *            the parent
		 * @param invokingState
		 *            the invoking state
		 */
		public OrClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public int getRuleIndex() {
			return RULE_orClause;
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SirmaListener)
				((SirmaListener) listener).enterOrClause(this);
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof SirmaListener)
				((SirmaListener) listener).exitOrClause(this);
		}
	}

	/**
	 * Or clause.
	 * 
	 * @return the or clause context
	 * @throws RecognitionException
	 *             the recognition exception
	 */
	public final OrClauseContext orClause() throws RecognitionException {
		OrClauseContext _localctx = new OrClauseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_orClause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(55);
				clause();
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == OR) {
					{
						{
							setState(56);
							match(OR);
							setState(57);
							clause();
						}
					}
					setState(62);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	/**
	 * The Class BooleanClauseContext.
	 */
	public static class BooleanClauseContext extends ParserRuleContext {

		/** The subject. */
		public SubjectContext subject;

		/** The operator. */
		public OperatorContext operator;

		/** The value. */
		public ValueContext value;

		/**
		 * In.
		 * 
		 * @return the terminal node
		 */
		public TerminalNode IN() {
			return getToken(SirmaParser.IN, 0);
		}

		/**
		 * Relation.
		 * 
		 * @return the relation context
		 */
		public RelationContext relation() {
			return getRuleContext(RelationContext.class, 0);
		}

		/**
		 * List of values.
		 * 
		 * @return the list of values context
		 */
		public ListOfValuesContext listOfValues() {
			return getRuleContext(ListOfValuesContext.class, 0);
		}

		/**
		 * Value.
		 * 
		 * @return the value context
		 */
		public ValueContext value() {
			return getRuleContext(ValueContext.class, 0);
		}

		/**
		 * Operator.
		 * 
		 * @return the operator context
		 */
		public OperatorContext operator() {
			return getRuleContext(OperatorContext.class, 0);
		}

		/**
		 * Subject.
		 * 
		 * @return the subject context
		 */
		public SubjectContext subject() {
			return getRuleContext(SubjectContext.class, 0);
		}

		/**
		 * Instantiates a new boolean clause context.
		 * 
		 * @param parent
		 *            the parent
		 * @param invokingState
		 *            the invoking state
		 */
		public BooleanClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public int getRuleIndex() {
			return RULE_booleanClause;
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SirmaListener)
				((SirmaListener) listener).enterBooleanClause(this);
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof SirmaListener)
				((SirmaListener) listener).exitBooleanClause(this);
		}
	}

	/**
	 * Boolean clause.
	 * 
	 * @return the boolean clause context
	 * @throws RecognitionException
	 *             the recognition exception
	 */
	public final BooleanClauseContext booleanClause() throws RecognitionException {
		BooleanClauseContext _localctx = new BooleanClauseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_booleanClause);
		try {
			setState(75);
			switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
				case 1:
					enterOuterAlt(_localctx, 1);
					{
						setState(63);
						((BooleanClauseContext) _localctx).subject = subject();
						setState(64);
						((BooleanClauseContext) _localctx).operator = operator();
						setState(65);
						((BooleanClauseContext) _localctx).value = value();
						System.out.println(((BooleanClauseContext) _localctx).subject.v);
						System.out.println(((BooleanClauseContext) _localctx).operator.op);
						System.out.println(((BooleanClauseContext) _localctx).value.v);
					}
					break;

				case 2:
					enterOuterAlt(_localctx, 2);
					{
						setState(68);
						subject();
						setState(69);
						match(IN);
						setState(70);
						listOfValues();
					}
					break;

				case 3:
					enterOuterAlt(_localctx, 3);
					{
						setState(72);
						relation();
						setState(73);
						value();
					}
					break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	/**
	 * The Class ListOfValuesContext.
	 */
	public static class ListOfValuesContext extends ParserRuleContext {

		/**
		 * Value.
		 * 
		 * @param i
		 *            the i
		 * @return the value context
		 */
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class, i);
		}

		/**
		 * Value.
		 * 
		 * @return the list
		 */
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}

		/**
		 * Rparen.
		 * 
		 * @return the terminal node
		 */
		public TerminalNode RPAREN() {
			return getToken(SirmaParser.RPAREN, 0);
		}

		/**
		 * Lparen.
		 * 
		 * @return the terminal node
		 */
		public TerminalNode LPAREN() {
			return getToken(SirmaParser.LPAREN, 0);
		}

		/**
		 * Instantiates a new list of values context.
		 * 
		 * @param parent
		 *            the parent
		 * @param invokingState
		 *            the invoking state
		 */
		public ListOfValuesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public int getRuleIndex() {
			return RULE_listOfValues;
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SirmaListener)
				((SirmaListener) listener).enterListOfValues(this);
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof SirmaListener)
				((SirmaListener) listener).exitListOfValues(this);
		}
	}

	/**
	 * List of values.
	 * 
	 * @return the list of values context
	 * @throws RecognitionException
	 *             the recognition exception
	 */
	public final ListOfValuesContext listOfValues() throws RecognitionException {
		ListOfValuesContext _localctx = new ListOfValuesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_listOfValues);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(77);
				match(LPAREN);
				setState(78);
				value();
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == COMMA) {
					{
						{
							setState(79);
							match(COMMA);
							setState(80);
							value();
						}
					}
					setState(85);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(86);
				match(RPAREN);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	/**
	 * The Class ObjectContext.
	 */
	public static class ObjectContext extends ParserRuleContext {

		/** The v. */
		public String v;

		/** The word. */
		public Token WORD;

		/**
		 * Word.
		 * 
		 * @return the terminal node
		 */
		public TerminalNode WORD() {
			return getToken(SirmaParser.WORD, 0);
		}

		/**
		 * All.
		 * 
		 * @return the terminal node
		 */
		public TerminalNode ALL() {
			return getToken(SirmaParser.ALL, 0);
		}

		/**
		 * Instantiates a new object context.
		 * 
		 * @param parent
		 *            the parent
		 * @param invokingState
		 *            the invoking state
		 */
		public ObjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public int getRuleIndex() {
			return RULE_object;
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SirmaListener)
				((SirmaListener) listener).enterObject(this);
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof SirmaListener)
				((SirmaListener) listener).exitObject(this);
		}
	}

	/**
	 * Object.
	 * 
	 * @return the object context
	 * @throws RecognitionException
	 *             the recognition exception
	 */
	public final ObjectContext object() throws RecognitionException {
		ObjectContext _localctx = new ObjectContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_object);
		try {
			setState(92);
			switch (_input.LA(1)) {
				case ALL:
					enterOuterAlt(_localctx, 1);
					{
						setState(88);
						match(ALL);
						((ObjectContext) _localctx).v = "ALL";
					}
					break;
				case WORD:
					enterOuterAlt(_localctx, 2);
					{
						setState(90);
						((ObjectContext) _localctx).WORD = match(WORD);
						((ObjectContext) _localctx).v = predicateValidator
								.getClassURI((((ObjectContext) _localctx).WORD != null ? ((ObjectContext) _localctx).WORD
										.getText() : null));
					}
					break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	/**
	 * The Class SubjectContext.
	 */
	public static class SubjectContext extends ParserRuleContext {

		/** The v. */
		public String v;

		/** The word. */
		public Token WORD;

		/**
		 * Word.
		 * 
		 * @return the terminal node
		 */
		public TerminalNode WORD() {
			return getToken(SirmaParser.WORD, 0);
		}

		/**
		 * Instantiates a new subject context.
		 * 
		 * @param parent
		 *            the parent
		 * @param invokingState
		 *            the invoking state
		 */
		public SubjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public int getRuleIndex() {
			return RULE_subject;
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SirmaListener)
				((SirmaListener) listener).enterSubject(this);
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof SirmaListener)
				((SirmaListener) listener).exitSubject(this);
		}
	}

	/**
	 * Subject.
	 * 
	 * @return the subject context
	 * @throws RecognitionException
	 *             the recognition exception
	 */
	public final SubjectContext subject() throws RecognitionException {
		SubjectContext _localctx = new SubjectContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_subject);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(94);
				((SubjectContext) _localctx).WORD = match(WORD);
				((SubjectContext) _localctx).v = predicateValidator
						.getPredicateURI((((SubjectContext) _localctx).WORD != null ? ((SubjectContext) _localctx).WORD
								.getText() : null));
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	/**
	 * The Class ValueContext.
	 */
	public static class ValueContext extends ParserRuleContext {

		/** The v. */
		public Serializable v;

		/** The word. */
		public Token WORD;

		/** The date. */
		public DateContext date;

		/**
		 * Word.
		 * 
		 * @return the terminal node
		 */
		public TerminalNode WORD() {
			return getToken(SirmaParser.WORD, 0);
		}

		/**
		 * Date.
		 * 
		 * @return the date context
		 */
		public DateContext date() {
			return getRuleContext(DateContext.class, 0);
		}

		/**
		 * Instantiates a new value context.
		 * 
		 * @param parent
		 *            the parent
		 * @param invokingState
		 *            the invoking state
		 */
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public int getRuleIndex() {
			return RULE_value;
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SirmaListener)
				((SirmaListener) listener).enterValue(this);
		}

		/**
		 * {@inheritDoc}
		 */
		@Override
